Add enable preview