@@ -67,6 +67,7 @@
 						<goal>shade</goal>
 					</goals>
 					<configuration>
+  						<argLine>--enable-preview</argLine>
 						<transformers>
 							<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 								<mainClass>minesweeper.fxui.MinesweeperApp</mainClass>
